syntax = "proto3";



option csharp_namespace = "CoreRoom";

package CoreRoomServices;

service ControleSalasService {
  rpc CriarBloco (BodyRequestSala) returns (BaseStatus);
  rpc CriarSala (BodyRequestSala) returns (BaseStatus);
  rpc ConsultarSala (BodyRequestSala) returns (BaseStatus);
  rpc ListarSalas (BodyRequestSala) returns (BaseStatus);
  rpc BloquearSala (BodyRequestSala) returns (BaseStatus);
  rpc DeletarSala (BodyRequestSala) returns (BaseStatus);
}
service GestaoSalasService {
  rpc ConsultarSala (BodyRequestSala) returns (BaseStatus);
  rpc AlocarSala (BodyRequestSala) returns (BaseStatus);
  rpc Desalocar (BodyRequestSala) returns (BaseStatus);
  rpc ConsultarSalaAlocada (BodyRequestSala) returns (BaseStatus);
  rpc ListarSalaAlocada (BodyRequestSala) returns (BaseStatus);
}
message BodyRequestSala{
  string Bloco = 1;
  int32 numeroDeAndares = 2;
  int32 numeroDeSalas = 3;
  string nomeResponsavel = 4;
  AndarInformation InfAndar = 5;

}
message AndarInformation{
  int32 NumeroDoAndar = 1;
  int32 NumeroSala = 2;
  bool Laboratorio = 3;
  bool Auditorio = 4;
  bool bloqueada = 5;
  string Materia = 6;
  string professor = 7;
  string curso = 8;
  int32 capacidadeDeAlunos = 9;
  string dataHoraInicio = 10;
  string dataHoraFim = 11;
}



message BaseStatus {
	enum enumStatus {
		SUCESSO = 0;
		NEGOCIO = 1;
		SISTEMA = 2;
	};
  enumStatus status =1;
  string message = 2;
  string dataResponse = 3;
}
